<resources>
    <string name="app_name">kotlin1</string>
    <string name="button1">Task1</string>
    <string name="button2">Task2</string>
    <string name="button3">Task3</string>
    <string name="left_button_text">TO LEFT</string>
    <string name="right_button_text">TO RIGHT</string>
    <string name="hide_list">hide list</string>
    <string name="toast">toast</string>
    <string name="FAB_text">Change TextEdit text</string>
    <string name="TextEditorHint">Type some text here…</string>
    <string name="change_label_color">Change label color</string>
    <string name="snackbar_text">Snackbar message</string>
    <string name="natural_number_button">nat</string>
    <string name="fibonacci_number_button">fib</string>
    <string name="collatz_number_button">col</string>
    <string name="Lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="car_picture">Car picture</string>
    <string name="some_picture">Some picture</string>
    <string name="save_number_task">Save number task</string>
    <string name="first_task">First task</string>
    <string name="second_task">Second task</string>
    <string name="third_task">Third task</string>
    <string name="opened">Nav menu is opened</string>
    <string name="closed">Nav menu is closed</string>
    <string name="run">Run</string>
    <string name="stop">Stop</string>
    <string name="reset">reset</string>
    <string name="new_task">Add task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_task">Save task</string>
</resources>