<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.FirstTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/pixels" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/Lorem"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </FrameLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ListView
            android:id="@+id/list_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textSize="22sp"
        tools:text="SOME TEXT" />

    <EditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_for_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/label_color_to_change"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/change_label_color"
            tools:text="Change label color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/hide_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hide_list" />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/invoke_toast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toast" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/FAB_text"
                android:src="@drawable/ic_baseline_arrow_circle_up_24" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>