<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FirstTaskDetailsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="186dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/teal_700"
        android:src="@drawable/pixels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/pixels" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/fib_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nat_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/nat_button"
        app:layout_constraintStart_toStartOf="@+id/nat_button"
        app:layout_constraintTop_toTopOf="@+id/fib_number" />

    <TextView
        android:id="@+id/col_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/col_button"
        app:layout_constraintStart_toStartOf="@+id/col_button"
        app:layout_constraintTop_toTopOf="@+id/fib_number" />

    <Button
        android:id="@+id/nat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/natural_number_button"
        app:layout_constraintEnd_toStartOf="@+id/fib_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fib_button" />

    <Button
        android:id="@+id/fib_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/fibonacci_number_button"
        app:layout_constraintLeft_toRightOf="@+id/nat_button"
        app:layout_constraintRight_toLeftOf="@+id/col_button"
        app:layout_constraintTop_toBottomOf="@+id/fib_number" />

    <Button
        android:id="@+id/col_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collatz_number_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fib_button"
        app:layout_constraintTop_toTopOf="@+id/fib_button" />

</androidx.constraintlayout.widget.ConstraintLayout>